# rust-commit-experiment

./: .gitignore  Cargo.toml  README.md
git-commit-ai/: main.rs
src/: error.rs  generator.rs  git.rs  main.rs  personalities.rs
