[package]
name = "git-commit-ai"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An AI-powered Git commit message generator with multiple personalities"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0" 